unpackaged/main/default/objects/Close_Form__c/Close_Form__c.object-meta.xml
<CustomObject>
    <label>Close Form</label>
    <nameField>
        <displayFormat>CloseForm-{00000}</displayFormat>
        <label>Close Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Close Forms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>