unpackaged/main/default/objects/Close_Form__c/fields/Actual_Residual_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Actual_Residual_Ownership__c</fullName>
    <formula>TEXT(Opportunity__r.Actual_Residual_Ownership__c)</formula>
    <label>Actual Residual Ownership</label>
    <type>Text</type>
</CustomField>