unpackaged/main/default/objects/Close_Form__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Close Forms</relationshipLabel>
    <relationshipName>Close_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>