unpackaged/main/default/objects/Close_Form__c/fields/CM_All__c.field-meta.xml
<CustomField>
    <fullName>CM_All__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CM All</label>
    <type>Checkbox</type>
</CustomField>