unpackaged/main/default/objects/Close_Form__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>