unpackaged/main/default/objects/Close_Form__c/fields/Equipment_Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Sale_Price__c</fullName>
    <label>Equipment Sale Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>