unpackaged/main/default/objects/Close_Form__c/fields/Extension_Rent__c.field-meta.xml
<CustomField>
    <fullName>Extension_Rent__c</fullName>
    <label>Extension Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>