unpackaged/main/default/objects/Close_Form__c/fields/Late_Fee__c.field-meta.xml
<CustomField>
    <fullName>Late_Fee__c</fullName>
    <label>Late Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>