unpackaged/main/default/objects/Close_Form__c/fields/Lease__c.field-meta.xml
<CustomField>
    <fullName>Lease__c</fullName>
    <label>Lease #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>