unpackaged/main/default/objects/Close_Form__c/fields/Lease_Level__c.field-meta.xml
<CustomField>
    <fullName>Lease_Level__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lease Level</label>
    <type>Checkbox</type>
</CustomField>