unpackaged/main/default/objects/Close_Form__c/fields/Lender_s_Payoff_Amount__c.field-meta.xml
<CustomField>
    <fullName>Lender_s_Payoff_Amount__c</fullName>
    <label>Lender's Payoff Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>