unpackaged/main/default/objects/Close_Form__c/fields/Payable_To__c.field-meta.xml
<CustomField>
    <fullName>Payable_To__c</fullName>
    <label>Payable To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>